# woodstock

./: sunya.config.yaml
env/local/: justfile
libs/woodstock/: CLAUDE.md  README.md  instructions  justfile  plan.md  pyproject.toml  setup.py
libs/woodstock/.claude/: settings.local.json
libs/woodstock/docs/spec/scenarios/: ms1_woodstock_uses_a_pluggable_file_storage.md  ms2_a_client_writes_a_simple_trace.md  ms3_a_client_writes_a_trace_with_a_payload_blob.md  ms4_a_client_labels_trace_nodes.md  ms5_the_woodstock_server_indexes_new_traces.md  ms6_the_woodstock_ui_queries_and_displays_traces.md
libs/woodstock/extra/spec_src/: sunya.config.yaml
libs/woodstock/extra/spec_src/scenarios/ms1_woodstock_uses_a_pluggable_file_storage/: scenario.py
libs/woodstock/extra/spec_src/scenarios/ms2_a_client_writes_a_simple_trace/: implementation-notes.md  scenario.py
libs/woodstock/extra/spec_src/scenarios/ms3_a_client_writes_a_trace_with_a_payload_blob/: scenario.py
libs/woodstock/src/woodstock/: settings.py
libs/woodstock/src/woodstock/storage/: enums.py
libs/woodstock/src/woodstock/trace/: enums.py
libs/woodstock/tests/: test_phase1_file_storage.py  test_phase2_write_trace.py  test_phase3_write_trace_with_blobs.py  test_phase4_labels.py  test_phase5_indexer.py
libs/woodstock_sdk/python/: README.md  brainstorm.md  plan.md  pyproject.toml  pytest.ini  setup.py
libs/woodstock_sdk/python/.claude/: settings.local.json
libs/woodstock_sdk/python/extra/spec_src/: sunya.config.yaml
libs/woodstock_sdk/python/src/woodstock_sdk/: settings.py
libs/woodstock_sdk/python/tests/: test_phase1_file_storage.py  test_phase2_write_trace.py  test_phase3_write_trace_with_blobs.py  test_phase4_labels.py
(+228 files in other folders)
